--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aoc-main = { version="0.4.1", features = ["bench"]}
+aoc-main = { git="https://github.com/remi-dupre/aoc.git", features = ["bench"]}
+arrayvec = "0.7.2"
+primitive-types = "0.12.1"
 
 [profile.release]
 lto = true
