--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 aoc-main = { git="https://github.com/remi-dupre/aoc.git", features = ["bench"]}
 primitive-types = "0.12.1"
+arrayvec = "0.7.2"
 
 [profile.release]
 lto = true
